--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# fichier locaux a ignorer
+bdd.db
+objets-trouves-restitution.*
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +132,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.gitignore
